--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,6 @@
 
     --theme-font: Typewriter, monospace;
     font-family: var(--theme-font);
-
-    overflow-x: hidden;
 }
 
 div {
@@ -93,4 +91,8 @@ body > .container > .header-menu > #contact-tag {
 
 body > .container > .header-menu > #contact-tag:hover {
     cursor: pointer;
+}
+
+body > .cloud-container {
+    overflow-x: hidden;
 }
