--- a/public/regex_generation/regex.css
+++ b/public/regex_generation/regex.css
@@ -2,7 +2,7 @@
 
 .regex-generation-container {
     display: grid;
-    grid-template-rows: auto 5px auto;
+    grid-template-rows: auto 5px auto 5px auto;
     grid-template-columns: 3fr 2fr 1fr;
     margin-left: 10%;
     margin-top: 5%;
@@ -36,6 +36,7 @@
     grid-row-start: 3;
     grid-column-start: 1;
     grid-column-end: 5;
+    margin-bottom: 5px;
 }
 
 .regex-generation-container > .output {
